--- a/css/style.css
+++ b/css/style.css
@@ -1607,15 +1607,15 @@ header .navbar-toggler-icon {
 }
 
 header .bg-dark .navbar-nav .nav-link {
-	color: #dcdcdc;
+	color: #565656;
 }
 
 header .bg-dark .navbar-nav .nav-link:hover {
-	color: #016e30;
+	color: #32f74c;
 }
 
 header .bg-dark .navbar-nav .active .nav-link {
-	color: #fff;
+	color: #262626;
 }
 
 header .bg-dark .navbar-toggler-icon {
@@ -10252,6 +10252,10 @@ table td {
 .says p {
   margin: 0;
   padding: 0;
+}
+
+.black {
+  color: #000;
 }
 
 /* -- plus.css -- */
